[package]
name = "libsignal-client-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Daniel <pdaniel.koe@gmail.com>"]
description = "libsignal-client-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
libsignal-protocol = { path = "../rust/protocol" }
rand = "0.7.3"

